--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -4,3 +4,8 @@
     exact = true
     stripComponents = 1
     refreshPeriod = "168h"
+
+#[".vim/autoload/plug.vim"]
+#    type = "file"
+#    url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
+#    refreshPeriod = "168h"
