--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -5,7 +5,7 @@
     stripComponents = 1
     refreshPeriod = "168h"
 
-#[".vim/autoload/plug.vim"]
-#    type = "file"
-#    url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
-#    refreshPeriod = "168h"
+[".vim/autoload/plug.vim"]
+    type = "file"
+    url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
+    refreshPeriod = "168h"
