--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,3 +1,4 @@
+# zsh
 [".zsh/plugins/zsh-syntax-highlighting"]
     type = "archive"
     url = "https://github.com/zsh-users/zsh-syntax-highlighting/archive/master.tar.gz"
@@ -5,6 +6,13 @@
     stripComponents = 1
     refreshPeriod = "168h"
 
+[".zsh/plugins/spaceship"]
+    type = "git-repo"
+    url = "https://github.com/spaceship-prompt/spaceship-prompt.git"
+    depth = 1
+    refreshPeriod = "168h"
+
+# vim
 [".vim/autoload/plug.vim"]
     type = "file"
     url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
