--- a/dot_config/private_chezmoi/chezmoi.toml
+++ b/dot_config/private_chezmoi/chezmoi.toml
@@ -1,3 +1,10 @@
+# vi: ft=toml
+{{ $email := promptString "email" -}}
+{{ $name := promptString "name" -}}
+[data]
+	email = "{{ $email }}"
+	name = "{{ $name }}"
+
 [git]
     autoCommit = true
     autoPush = true
