--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,9 +1,13 @@
 # zsh
-[".zsh/plugins/zsh-syntax-highlighting"]
-    type = "archive"
-    url = "https://github.com/zsh-users/zsh-syntax-highlighting/archive/master.tar.gz"
-    exact = true
-    stripComponents = 1
+#[".zsh/plugins/zsh-syntax-highlighting"]
+#    type = "archive"
+#    url = "https://github.com/zsh-users/zsh-syntax-highlighting/archive/master.tar.gz"
+#    exact = true
+#    stripComponents = 1
+#    refreshPeriod = "168h"
+[".local/share/zinit"]
+    type = "git-repo"
+    url = "https://github.com/zdharma-continuum/zinit.git"
     refreshPeriod = "168h"
 
 # vim
