--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -53,7 +53,7 @@ renamed = '👅'
 deleted = '🗑'
 
 [hostname]
-format = '[[$ssh_symbol](bold blue)]( $combined)[$hostname]($style)'
+format = '[$hostname]($style)($ssh_symbol)'
 style = 'purple_blue'
 trim_at = '.'
 ssh_only = false
