--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -53,7 +53,8 @@ renamed = '👅'
 deleted = '🗑'
 
 [hostname]
-format = '[$hostname]($style)($ssh_symbol)'
+format = '[$hostname\[$ssh_symbol\]]($style)'
+ssh_symbol='🌐'
 style = 'purple_blue'
 trim_at = '.'
 ssh_only = false
