--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -53,7 +53,7 @@ renamed = '👅'
 deleted = '🗑'
 
 [hostname]
-format = '[$hostname\[$ssh_symbol\]]($style)'
+format = '[$hostname[\[$ssh_symbol\]](lavender)]($style)'
 ssh_symbol='🌐'
 style = 'purple_blue'
 trim_at = '.'
