Remove .chezmoiignore Add .chezmoiignore Update .config/starship.toml

--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -53,8 +53,7 @@ renamed = '👅'
 deleted = '🗑'
 
 [hostname]
-format = '[$hostname[\[$ssh_symbol\]](lavender)]($style)'
-ssh_symbol='🌐'
+format = '[[$ssh_symbol](bold blue)]( $combined)[$hostname]($style)'
 style = 'purple_blue'
 trim_at = '.'
 ssh_only = false
