--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -2,7 +2,8 @@
 
 format = """
 [┌─](pastel_purple)$username[@](pastel_purple)$hostname[:](pastel_purple)$directory\
-([\n│ ](pastel_purple)$git_branch$git_commit$git_status)
+([\n│ ](pastel_purple)$git_branch$git_commit$git_status)\
+([\n│ ](pastel_purple)$rust$package)
 [└─$character](pastel_purple)
 """
 
@@ -17,9 +18,6 @@ lilac = '#b65fcf'
 joker_purple = '#4a0336'
 pastel_purple = '#c3b1e1'
 pastel_orange = '#ff964f'
-
-[package]
-disabled = true
 
 [character]
 success_symbol = '>'
