Update .chezmoitemplates/linux/run/00-install-package-mgr.sh Update .chezmoitemplates/linux/run/01-install-manual.sh Update .chezmoitemplates/linux/run/99-finalise.sh Update .config/starship.toml Update 00

--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -4,7 +4,8 @@ format = """
 [┌─](pastel_purple)$username[@](pastel_purple)$hostname[:](pastel_purple)$directory\
 ([\n│ ](pastel_purple)$git_branch$git_commit$git_status)\
 ([\n│ ](pastel_purple)$rust$package)
-[└─$character](pastel_purple)"""
+[└─$character](pastel_purple)
+"""
 
 add_newline = false
 command_timeout = 1500
