--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,11 +1,6 @@
 [".local/share/zinit"]
 	type = "git-repo"
-	url = "https://github.com/zdharma-continuum/zinit.git"
-	refreshPeriod = "168h"
-
-[".vim/autoload/plug.vim"]
-	type = "file"
-	url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
+	url = "https://github.com/zdharma-continuum/zinit"
 	refreshPeriod = "168h"
 
 [".config/kitty/kitty-themes"]
@@ -15,5 +10,11 @@
 
 [".vim/external/dracula"]
 	type = "git-repo"
-	url = " https://github.com/dracula/vim.git"
+	url = "https://github.com/dracula/vim"
 	refreshPeriod = "168h"
+
+[".vim/autoload/plug.vim"]
+	type = "file"
+	url = "https://rawhubusercontent.com/junegunn/vim-plug/master/plug.vim"
+	refreshPeriod = "168h"
+
