--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -15,6 +15,6 @@
 
 [".vim/autoload/plug.vim"]
 	type = "file"
-	url = "https://rawhubusercontent.com/junegunn/vim-plug/master/plug.vim"
+	url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
 	refreshPeriod = "168h"
 
