Update .config/VSCodium/User/settings.json Update .config/starship.toml

--- a/dot_config/private_VSCodium/User/settings.json
+++ b/dot_config/private_VSCodium/User/settings.json
@@ -1,5 +1,5 @@
 {
-    "workbench.colorTheme": "One Dark Pro",
+    "workbench.colorTheme": "Dracula Dark+",
     "extensions.experimental.affinity": {
         "asvetliakov.vscode-neovim": 1
     }
