--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -32,7 +32,7 @@ truncation_symbol = '…/'
 
 [git_branch]
 format = '$remote_name on [$symbol $branch(:$remote_branch)]($style)'
-symbol = '⸙'
+symbol = ''
 style = 'pastel_orange'
 
 [git_status]
@@ -41,18 +41,19 @@ style = 'pastel_orange'
 ahead = '⇡${count}'
 diverged = '⇕⇡${ahead_count}⇣${behind_count}'
 behind = '⇣${count}'
-conflicted = '🏳'
-up_to_date = '✓'
-untracked = '🤷'
-stashed = '📦'
-modified = '📝'
+conflicted = '󱓌'
+up_to_date = '󱓏'
+untracked = '󰡯'
+stashed = '󰩪'
+modified = ''
 staged = '[++\($count\)](green)'
-renamed = '👅'
-deleted = '🗑'
+renamed = ''
+deleted = ''
 
 [hostname]
-format = '[$hostname]($style)[$ssh_symbol](bold blue)'
+format = '[$hostname]($style) via [$ssh_symbol](bold blue)'
 style = 'purple_blue'
+ssh_symbol = '󰀂'
 trim_at = '.'
 ssh_only = false
 disabled = false
