--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -51,7 +51,7 @@ renamed = ''
 deleted = ''
 
 [hostname]
-format = '[$hostname]($style)[ via [$ssh_symbol](bold blue)]'
+format = '[$ssh_symbol on ](bold blue)[$hostname]($style)'
 style = 'purple_blue'
 ssh_symbol = '󰀂'
 trim_at = '.'
