--- a/dot_config/VSCodium/User/settings.json
+++ b/dot_config/VSCodium/User/settings.json
@@ -2,5 +2,7 @@
     "workbench.colorTheme": "Dracula Dark+",
     "extensions.experimental.affinity": {
         "asvetliakov.vscode-neovim": 1
-    }
+    },
+    "window.zoomLevel": 1,
+    "editor.fontFamily": "'FantasqueSansM Nerd Font Mono', 'Regular'"
 }
