--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -3,12 +3,12 @@
 	url = "https://github.com/zdharma-continuum/zinit"
 	refreshPeriod = "168h"
 
-[".config/kitty/kitty-themes"]
-	type = "git-repo"
-	url = "https://github.com/dexpota/kitty-themes"
-	refreshPeriod = "168h"
-
 [".vim/autoload/plug.vim"]
 	type = "file"
 	url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
+	refreshPeriod = "168h"
+
+[".config/kitty/dracula.conf"]
+	type = "file"
+	url = "https://raw.githubusercontent.com/dracula/kitty/master/dracula.conf"
 	refreshPeriod = "168h"
