--- a/dot_config/neofetch/config.conf
+++ b/dot_config/neofetch/config.conf
@@ -761,7 +761,8 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="auto"
+# ascii_distro="auto"
+ascii_distro="Darwin"
 
 # Ascii Colors
 #
@@ -773,7 +774,7 @@ ascii_distro="auto"
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
 #ascii_colors=(distro)
-ascii_colors=(4 12 0 0 0 0)
+ascii_colors=(4 12 3 11 6 14)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
