--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -47,7 +47,7 @@ symbol=''
 
 [hostname]
 format = '[@](white)[$hostname]($style)'
-style = 'blue'
+style = 'cyan'
 ssh_symbol = ''
 trim_at = '.'
 ssh_only = true
