--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -24,11 +24,11 @@ truncation_symbol = '…/'
 [git_branch]
 format = ' $remote_name on [$symbol $branch(:$remote_branch)]($style)'
 symbol = ''
-style = 'pastel_orange'
+style = 'git_orange'
 
 [git_status]
 format = ' [\[$all_status\]]($style)'
-style = 'pastel_orange'
+style = 'git_orange'
 ahead = '⇡${count}'
 diverged = '⇕⇡${ahead_count}⇣${behind_count}'
 behind = '⇣${count}'
@@ -46,8 +46,8 @@ format='$symbol $package via [($version)]($style)'
 symbol=''
 
 [hostname]
-format = '[@](white)[$hostname]($style)'
-style = 'cyan'
+format = '[@](pastel_purple)[$hostname]($style)'
+style = 'purple bold'
 ssh_symbol = ''
 trim_at = '.'
 ssh_only = true
