--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -8,6 +8,11 @@
 	url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
 	refreshPeriod = "168h"
 
+[".config/kitty/nord.conf"]
+	type = "file"
+	url = "https://raw.githubusercontent.com/connorholyday/nord-kitty/master/nord.conf"
+	refreshPeriod = "168h"
+
 [".config/kitty/dracula.conf"]
 	type = "file"
 	url = "https://raw.githubusercontent.com/dracula/kitty/master/dracula.conf"
