--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -8,13 +8,13 @@
 	url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
 	refreshPeriod = "168h"
 
-[".config/kitty/nord.conf"]
+[".config/kitty/themes/nord.conf"]
 	type = "file"
 	# url = "https://raw.githubusercontent.com/connorholyday/nord-kitty/master/nord.conf"
 	url = "https://raw.githubusercontent.com/m8mble/nord-kitty/master/nord-kitty.conf"	
 	refreshPeriod = "168h"
 
-[".config/kitty/dracula.conf"]
+[".config/kitty/themes/dracula.conf"]
 	type = "file"
 	url = "https://raw.githubusercontent.com/dracula/kitty/master/dracula.conf"
 	refreshPeriod = "168h"
