--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -3,6 +3,11 @@
 	type = "git-repo"
 	url = "https://github.com/zdharma-continuum/zinit"
 	refreshPeriod = "168h"
+# Ranger Dev Icons
+[".config/ranger/plugins/ranger_devicons"]
+	type = "git-repo"
+	url = "https://github.com/alexanderjeurissen/ranger_devicons"
+	refreshPeriod = "168h"
 # vim package manager
 [".vim/autoload/plug.vim"]
 	type = "file"
