--- a/dot_config/ranger/rc.conf
+++ b/dot_config/ranger/rc.conf
@@ -1,5 +1,5 @@
 set show_hidden true
 set preview_images true
 set preview_images_method kitty
+set draw_borders both
 default_linemode devicons
-map pz extracthere
