--- a/dot_config/joshuto/mimetype.toml
+++ b/dot_config/joshuto/mimetype.toml
@@ -42,6 +42,7 @@ sh.inherit = "text_default"
 srt.inherit = "text_default"
 svelte.inherit = "text_default"
 toml.inherit = "text_default"
+tmpl.inherit = "text_default"
 tsx.inherit = "text_default"
 txt.inherit = "text_default"
 vim.inherit = "text_default"
