--- a/dot_config/joshuto/mimetype.toml
+++ b/dot_config/joshuto/mimetype.toml
@@ -4,7 +4,7 @@ text_default = [
 	{ command = "neovide", fork = true, silent = true },
 ]
 image_default = [ { command = "loupe", fork = true, silent = true } ]
-video_default = [ { command = "vlc", fork = true, silent = true } ]
+video_default = [ { command = "mpv", fork = true, silent = true } ]
 reader_default = [ { command = "evince", fork = true, silent = true } ]
 
 [extension]
@@ -61,3 +61,6 @@ inherit = "text_default"
 
 [mimetype.image]
 inherit = "image_default"
+
+[mimetype.video]
+inherit = "video_default"
